--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "version": "0.4.0",
     "main": "server.js",
     "dependencies": {
-        "express": "3.4.x",
-        "socket.io": "0.9.x"
+        "express": "4.15.0",
+        "socket.io": "2.0.x"
     },
     "engines": {
-        "node": "0.10.x",
-        "npm": "1.2.x"
+        "node": "8.2.1",
+        "npm": "5.3.0"
     }
 }
