--- a/package.json
+++ b/package.json
@@ -11,4 +11,15 @@
         "node": "8.2.1",
         "npm": "5.3.0"
     }
+    "dependencies": {
+        "karma": "^0.13.21",
+        "karma-chrome-launcher": "^0.1.4",
+        "karma-firefox-launcher": "^0.1.3",
+        "karma-jasmine": "~0.1.0",
+        "protractor": "^2.1.0",
+        "http-server": "^0.9.0",
+        "tmp": "0.0.23",
+        "bower": "^1.3.1",
+        "shelljs": "^0.2.6"
+    },
 }
